--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body id="body">
+    <header>
+        <h1>This is DOM manipulation Events</h1>
+        <button onclick="console.log('most use charset');">Click Here</button>
+        <button onclick="console.log(12);">Another Button</button>
+        <br><br>
+        <button onclick="makeRed()">Make it Green</button>
+        <button onclick="document.body.style.backgroundColor = 'yellow'">Background Change</button>
+        <br><br>
+        <!-- option three -->
+        <button id="make-option-3">On click option 3</button>
+        <br><br>
+        <button onclick="makeColor()">New Button</button>
+        <br><br>
+        <button id="make-pink">Pink Button </button>
+        <br><br>
+        <button id="blue-button">bBlue</button>
+    </header>
+    <script src="./JS/events.js"></script>
 </body>
 </html>
